@@ -38,8 +38,10 @@
 <p>2015-03-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
-<li>magick/effect.c (EmbossImage): Silence Coverity &quot;Dereference
-after null check&quot;.</li>
+<li>magick/effect.c (EmbossImage): Silence Coverity 10114
+&quot;Dereference after null check&quot;.
+(AdaptiveThresholdImage): Silence Coverity 10118 &quot;Explicit null
+dereferenced&quot;.</li>
 <li>coders/msl.c (MSLPushImage): Silence Coverity 10128 &quot;Dereference
 after null check&quot;.</li>
 <li>magick/render.c (DrawPolygonPrimitive): Silence Coverity 10136
